# doctor_oop

./: .dockerignore  .gitignore  CMakeLists.txt  Dockerfile.backend  README.md  docker-compose.yml  Промпт.txt
frontend/: Dockerfile  app.js  index.html  styles.css
src/: ClinicHttpServer.cpp  ClinicHttpServer.h  Database.cpp  Database.h  Disease.cpp  Disease.h  Doctor.cpp  Doctor.h  Patient.cpp  Patient.h  main.cpp
